ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration6/input.ts.stderr
error: Unexpected token `constructor`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration6/input.ts:2:17
  |
2 |   public public constructor() { }
  |                 ^^^^^^^^^^^

error[1005]: Expected '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration6/input.ts:3:1
  |
3 | }
  | ^

